# foo_test

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
example/: main_f.cpp
include/: foo.h
tests/: catch.hpp  init.cpp
